Make power requests processing async, added power status route, options route and reboot route
