# router/v1/service/optionsRoute.ts
@@ -1,0 +1,27 @@
+import {AppContext} from "../../../app";
+import {RouterHandler} from "../../index";
+
+export default async function ({engine}: AppContext): Promise<RouterHandler> {
+    return {
+        url: '/service/:id/options',
+        routes: {
+            post: async (req, res) => {
+                const id = req.params.id;
+                if (!id) {
+                    res.status(400).json({status: 400, message: 'Required \'id\' field not present in the body.'});
+                    return;
+                }
+                const options = req.body;
+                if (!options) {
+                    res.status(400).json({status: 400, message: 'Body is required.'});
+                    return;
+                }
+                if (await engine.updateOptions(id, options)) {
+                    res.status(200).json({status: 200, message: 'Service options updated.'});
+                } else {
+                    res.status(404).json({status: 404, message: 'Service not found or unknown error occured.'});
+                }
+            }
+        },
+    }
+}
