# router/v1/service/powerStatusRoute.ts
@@ -1,9 +1,10 @@
 import {AppContext} from "../../../app";
 import {RouterHandler} from "../../index";
+import {isServicePending} from "../../../engine/asyncp";
 
 export default async function ({engine}: AppContext): Promise<RouterHandler> {
     return {
-        url: '/service/:id/delete',
+        url: '/service/:id/powerstatus',
         routes: {
             post: async (req, res) => {
                 const id = req.params.id;
@@ -11,16 +12,18 @@ export default async function ({engine}: AppContext): Promise<RouterHandler> {
                     res.status(400).json({status: 400, message: 'Required \'id\' field not present in the body.'});
                     return;
                 }
-                try {
-                    const result = await engine.deleteService(id);
-                    if (result) {
-                        res.status(200).json({status: 200, message: 'Service deleted.'});
-                    } else {
-                        res.status(404).json({status: 404, message: 'Service not found or unknown error occured.'});
+                let status = 'IDLE';
+                let error = undefined;
+                if (isServicePending(id)) {
+                    status = 'PENDING';
+                } else {
+                    const err = engine.getLastPowerError(id);
+                    if (err) {
+                        status = 'ERROR';
+                        error = err;
                     }
-                } catch (e) {
-                    res.status(500).json({status: 500, message: e.message});
                 }
+                res.status(200).json({ id, status, error }).end();
             }
         },
     }
