# router/v1/service/rebootRoute.ts
@@ -3,7 +3,7 @@ import {RouterHandler} from "../../index";
 
 export default async function ({engine}: AppContext): Promise<RouterHandler> {
     return {
-        url: '/service/:id/resume',
+        url: '/service/:id/reboot',
         routes: {
             post: async (req, res) => {
                 const id = req.params.id;
@@ -12,18 +12,10 @@ export default async function ({engine}: AppContext): Promise<RouterHandler> {
                     return;
                 }
                 try {
-                    const result = await engine.resumeService(id);
-                    if (result) {
-                        res.status(200).json({
-                            status: 200,
-                            message: 'Service resume action successfully registered to be completed in a moment.',
-                            statusPath: '/v1/service/' + id + '/powerstatus',
-                        });
+                    if (await engine.stopService(id) && await engine.resumeService(id)) {
+                        res.status(200).json({status: 200, message: 'Service reboot action successfully registered to be completed in a moment.'});
                     } else {
-                        res.status(404).json({
-                            status: 404,
-                            message: 'Service not found or unknown error occured.'
-                        });
+                        res.status(404).json({status: 404, message: 'Service not found or unknown error occured.'});
                     }
                 } catch (e) {
                     res.status(500).json({status: 500, message: e.message});
